# tcolorpy

./: .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  appveyor.yml  pylama.ini  pyproject.toml  rename_to.sh  setup.py  tox.ini
.github/workflows/: ci.yml  on_push_default_branch.yml  release.yml  tests.yml
examples/: ansi_colors.py  ansi_styles.py  background_colors.py  lib.py
requirements/: test_requirements.txt
tcolorpy/: __init__.py  __main__.py  __version__.py  _const.py  _truecolor.py
test/: __init__.py  test_color.py  test_truecolor.py
